@@ -1,15 +1,33 @@
 # Getting started
 
-The game store is a Java project that demonstrates how a _game store_ like Steam is. This is just a project for an object-based programming course assignment
+The game store is a Java project that demonstrates how a _game store_ like Steam is. This is just a project for an object-based programming course assignment for information system study program on Institut Teknologi Telkom Surabaya
 
 ## Prerequisites
 
-- Java SDK 11 or above
+- Java SDK **recommended : Java 11**
 - JavaFX
-- mySQL
+- MySQL
 
 other : Visual Studio Code
 
 ## Running
 
-open `GameStoreMain.java` on Visual Studio Code and click run.
+if you using java 11 or above set the vmArgs.
+
+```json
+"vmArgs": "--module-path <directorey library javaFX> --add-modules javafx.controls,javafx.fxml"
+```
+
+## Team
+
+[@Muhamad Arsyad](https://github.com/arsyadbruh)
+
+[@Andhika Juliawan](https://github.com/andhikajuliawan)
+
+[@Andi Matalaric](https://github.com/matalaric)
+
+[@Jalu](https://github.com/jaalluoee)
+
+[@Dandy](https://github.com/Dandy231)
+
+[@Kharis](#)
